ingress/traefik/production/ingress-route/traefik-dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: ingress-traefik
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`traefik-dashboard.aimhighergg.com`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
    kind: Rule
    middlewares:
    - name: ip-whitelist
    - name: ingress-basic-auth
    services:
    - name: api@internal
      kind: TraefikService
  tls:
    secretName: traefik-dashboard-aimhighergg-com-tls
