ingress/traefik/production/ingress-route/vault-aimhighergg-com.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vault
  namespace: vault
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vault.aimhighergg.com`)
      kind: Rule
      middlewares:
        - name: ip-whitelist
          namespace: vault
        - name: basic-auth
          namespace: vault
      services:
        - name: vault-ui-https
          kind: TraefikService
  tls:
    secretName: vault-aimhighergg-com-tls
