ingress/traefik/production/ingress-route/viteful.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: <path:secret/data/viteful/dev/namespace#NAMESPACE>
  namespace: <path:secret/data/viteful/dev/namespace#NAMESPACE>
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`<path:secret/data/viteful/dev/ingress#HOST>`)
      kind: Rule
  tls:
    secretName: <path:secret/data/viteful/dev/namespace#NAMESPACE>-tls
